--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,31 @@
 [project]
 name = "comoving"
+authors = [
+    {name = "Aida Behmard", email = "aida.behmard@gmail.com"},
+    {name = "Adrian Price-Whelan", email = "583379+adrn@users.noreply.github.com"},
+]
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9,<3.10"
+license = {file = "LICENSE"}
+requires-python = ">=3.12"
 dependencies = [
-    "astropy",
-    "h5py",
+    "astropy>=6.0.1",
+    "h5py>=3.13.0",
     "healpy>=1.17.3",
-    "matplotlib",
-    "numpy>=1.19",
-    "pathlib",
+    "matplotlib>=3.9.4",
+    "numpy>=1.26.4",
+    "scipy>=1.16.3",
 ]
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
-    "ipykernel>=6.29.5",
+    "ipykernel"
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/comoving"]
